--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@ input[type="range"]::-webkit-slider-thumb{
     var result = document.getElementById("result");
 
     var weight = parseInt(document.getElementById("weight").value);
-    document.getElementById("weight-val").textContent = weight + " kg";
+    document.getElementById("weight-val").textContent = "Berat " + weight + " kg";
 
     var height = parseInt(document.getElementById("height").value);
-    document.getElementById("height-val").textContent = height + " cm";
+    document.getElementById("height-val").textContent = "Tinggi " + height + " cm";
 
     bmi = (weight / Math.pow( (height/100), 2 )).toFixed(1);
     result.textContent = bmi;
