--- a/index.html
+++ b/index.html
@@ -1,197 +1,281 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <title>Kalkulator BMI oleh Private Clinic No 53</title>
-	<meta content="Kalkulator Ini dibuat oleh pihak PRIVATE CLINIC NO 53.Dengan tujuan untuk mempermudah penghitunga BMI yang sesuai standar" name="description">
-    <!--Google Font-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-    <!--Stylesheet-->
-    <link rel="stylesheet" href="style.css">
-	
-	<style>
-	*,
-*:before,
-*:after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    height: 100vh;
-    background: linear-gradient(
-        135deg,
-        #F9F9F9,
-        #A6A6A6
-    );
-}
-.container{
-    background-color: #ffffff;
-    padding: 40px 30px;
-    width: 50%;
-    min-width: 400px;
-    position: relative;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 5px;
-    font-family: 'Poppins',sans-serif;
-    box-shadow: 25px 25px 30px rgba(0,0,0,0.15);
-}
-.row{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 40px;
-}
-.row span{
-    font-weight: 500;
-}
-input[type="range"]{
-    width: 70%;
-    height: 3.5px;
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: #dcdcdc;
-    border-radius: 3px;
-    outline: none;
-}
-input[type="range"]::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    appearance: none;
-    height: 15px;
-    width: 15px;
-    background-color: #1c1c1c;
-    border-radius: 50%;
-    cursor: pointer;
-}
-#result{
-    font-size: 30px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-align: center;
-    color: #0be881;
-}
-#category{
-    font-size: 18px;
-    text-align: center;
-    letter-spacing: 1px;
+  <title>Kalkulator BMI by Private Clinic NO 53</title>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
+   
+  <style>
+  * {
+  font-family: Quicksand;
+  font-size: 16px;
+  color: #333;
 }
 
-/* CSS */
-#button-53 {
-  background-color: #A6A6A6;
-  border: 0 solid #E5E7EB;
-  box-sizing: border-box;
-  color: #000000;
-  display: flex;
-  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 700;
-  justify-content: center;
-  line-height: 1.75rem;
-  padding: .75rem 1.65rem;
-  position: relative;
-  text-align: center;
-  text-decoration: none #000000 solid;
-  text-decoration-thickness: auto;
-  width: 100%;
-  max-width: 460px;
-  position: relative;
+body {
+  margin: 0;
+  height: 100vh;
+  padding: 0;
+  border: 0;
+  background: linear-gradient(to bottom right,  #F1F2B5, #eef2f3);
+}
+
+.form {
+  background-color: #fff;
+  height: 280px;
+  width: 450px;
+  border-radius: 20px;
+  margin: 20px auto 20px auto;
+  display: block;
+  border: solid 1px #289df6;
+  
+  box-shadow: 0 0 40px 0 #ddd;
+}
+
+.form:hover {
+  box-shadow: 0 0 60px 0 #ccc;
+  transition: .4s;
+  transform: scale(1.02);
+}
+
+.row-one {
+  padding: 20px;
+}
+
+.row-two {
+  padding: 20px;
+}
+
+.text-input {
+  width: 60px;
+  height: 30px;
+  border-radius: 10px;
+  background-color: #dbeffe;
+  border: none;
+  outline: none;
+  padding: 5px 10px;
   cursor: pointer;
-  transform: rotate(-2deg);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
 }
 
-#button-53:focus {
-  outline: 0;
+.text-input:last-child {
+  margin-bottom: 35px;
 }
 
-#button-53:after {
-  content: '';
-  position: absolute;
-  border: 1px solid #000000;
-  bottom: 4px;
-  left: 4px;
-  width: calc(100% - 1px);
-  height: calc(100% - 1px);
+.text-input:hover {
+  background-color: #cbe7fd;
 }
 
-#button-53:hover:after {
-  bottom: 2px;
-  left: 2px;
+#submit {
+  border: none;
+  border-radius: 10px;
+  height: 40px;
+  width: 140px;
+  background-color: #289df6;
+  color: #fff;
+  margin: auto;
+  display: block;
+  outline: none;
+  cursor: pointer;
 }
 
-@media (min-width: 768px) {
-  button-53 {
-    padding: .75rem 3rem;
-    font-size: 1.25rem;
-  }
+#submit:hover{
+  background-color: #0a8ef2;
 }
 
-.btn-margin {
+#reset {
+  border: none;
+  border-radius: 10px;
+  height: 40px;
+  width: 140px;
+  background-color: #289df6;
+  color: #fff;
+  margin: auto;
+  display: block;
+  outline: none;
+  cursor: pointer;
+}
+
+#reset:hover{
+  background-color: #0a8ef2;
+}
+
+#btn-margin {
   margin-top: 20px;
 }
-	</style>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <input type="range" min="20" max="200" value="20" id="weight" oninput="calculate()">
-            <span id="weight-val">20 kg</span>
-        </div>
-        <div class="row">
-            <input type="range" min="100" max="250" value="100" id="height" oninput="calculate()">
-            <span id="height-val">100 cm</span>
-        </div>
 
-        <p id="result">20.0</p>
-        <p id="category">Berat badan normal</p>
-		
-		<div class="btn-margin"></div>
-		
-		<center><button id="button-53" role="button" onclick="location.href='https://clinic-53.berdu.pw/diet-program'">Ke Halaman Web Private Clinic no 53</button></center>
-    </div>
-
-    <!--Script-->
-    <script src="script.js"></script>
-	
-	<script>
-	function calculate(){
-    var bmi;
-    var result = document.getElementById("result");
-
-    var weight = parseInt(document.getElementById("weight").value);
-    document.getElementById("weight-val").textContent = "Berat " + weight + " kg";
-
-    var height = parseInt(document.getElementById("height").value);
-    document.getElementById("height-val").textContent = "Tinggi " + height + " cm";
-
-    bmi = (weight / Math.pow( (height/100), 2 )).toFixed(1);
-    result.textContent = bmi;
-    
-    if(bmi < 18.5){
-        category = "Kurus";
-        result.style.color = "#ffc44d";
-    }
-    else if( bmi >= 18.5 && bmi <= 24.9 ){
-        category = "Berat badan normal";
-        result.style.color = "#0be881";
-    }
-    else if( bmi >= 25 && bmi <= 29.9 ){
-        category = "Berat badan berlebih";
-        result.style.color = "#ff884d";
-    }
-    else{
-        category = "Obesitas";
-        result.style.color = "#ff5e57";
-    }
-    document.getElementById("category").textContent = category;
+.text {
+  display: inline-block;
+  margin: 5px 20px 5px 8px;;
 }
 
-	</script>
-	
+.row-one {
+  padding: 30px 20px 15px 20px;
+}
+.row-two {
+  padding: 15px 20px 30px 20px;
+}
+
+.container {
+  display: inline-block;
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.container input {
+  position: absolute;
+  opacity: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #dbeffe;
+  border-radius: 50%;
+}
+
+.container:hover input ~ .checkmark {
+  background-color: #cbe7fd;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: #289df6;
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: 300;
+  text-align: center;
+  color: #289df6;
+  padding-top: 15px;
+  display: block;
+}
+
+h2 {
+  font-size: 22px;
+  font-weight: 300;
+  text-align: center;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
+  padding: 15px;
+}
+
+h3 b {
+  font-size: 32px;
+  font-weight: 300;
+  color: #289df6;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+  </style> 
+  
+</head>
+<body>
+  <h3><b>Kalkulator B</b>ody <b>M</b>ass <b>I</b>ndex oleh PRIVATE CLINIC NO 53</h3>
+<form class="form" id="form" onsubmit="return validateForm()">
+<div class="row-one">
+  <input type="text" class="text-input" id="age" autocomplete="off" required/><p class="text">Umur</p>
+  <label class="container">
+  <input type="radio" name="radio" id="f"><p class="text">Wanita</p>
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">
+  <input type="radio" name="radio" id="m"><p class="text">Pria</p>
+    <span class="checkmark"></span>
+  </label>
+  </div>
+
+<div class="row-two">
+  <input type="text" class="text-input" id="height" autocomplete="off" required><p class="text">Tinggi (cm)</p>
+  <input type="text" class="text-input" id="weight" autocomplete="off" required><p class="text">Berat (kg)</p>
+</div>
+<button type="button" id="submit">Hitung</button>
+<div id="btn-margin"></div>
+<button type="reset" id="reset" onclick="window.location.reload()">Reset</button>
+</form>
+
+
+
+<script>
+var age = document.getElementById("age");
+var height = document.getElementById("height");
+var weight = document.getElementById("weight");
+var male = document.getElementById("m");
+var female = document.getElementById("f");
+var form = document.getElementById("form");
+
+function validateForm(){
+  if(age.value=='' || height.value=='' || weight.value=='' || (male.checked==false && female.checked==false)){
+    alert("Masukkan data dengan benar!");
+    document.getElementById("submit").removeEventListener("click", countBmi);
+  }else{
+    countBmi();
+  }
+}
+document.getElementById("submit").addEventListener("click", validateForm);
+
+function countBmi(){
+  var p = [age.value, height.value, weight.value];
+  if(male.checked){
+    p.push("male");
+  }else if(female.checked){
+    p.push("female");
+  }
+  var bmi = Number(p[2])/(Number(p[1])/100*Number(p[1])/100);
+      
+  var result = '';
+  if(bmi<18.5){
+    result = 'Kurus';
+     }else if(18.5<=bmi&&bmi<=24.9){
+    result = 'Normal / Sehat';
+     }else if(25<=bmi&&bmi<=29.9){
+    result = 'Berat badan berlebih';
+     }else if(30<=bmi&&bmi<=34.9){
+    result = 'Obesitas';
+     }else if(35<=bmi){
+    result = 'Sangat obesitas';
+     }
+  
+  var h1 = document.createElement("h1");
+  var h2 = document.createElement("h2");
+
+  var t = document.createTextNode(result);
+  var b = document.createTextNode('BMI: ');
+  var r = document.createTextNode(parseFloat(bmi).toFixed(2));
+  
+  h1.appendChild(t);
+  h2.appendChild(b);
+  h2.appendChild(r);
+  
+  document.body.appendChild(h1);
+  document.body.appendChild(h2);
+  document.getElementById("submit").removeEventListener("click", countBmi);
+  document.getElementById("submit").removeEventListener("click", validateForm);
+}
+document.getElementById("submit").addEventListener("click", countBmi);
+</script>
+
 </body>
-</html>
