--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<DOCTYPE html>
 <head>
   <title>Kalkulator BMI by Private Clinic NO 53</title>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
@@ -19,7 +20,7 @@ body {
 
 .form {
   background-color: #fff;
-  height: 280px;
+  height: 300px;
   width: 450px;
   border-radius: 20px;
   margin: 20px auto 20px auto;
@@ -215,6 +216,8 @@ h3 b {
 <button type="button" id="submit">Hitung</button>
 <div id="btn-margin"></div>
 <button type="reset" id="reset" onclick="window.location.reload()">Reset</button>
+<div id="btn-margin"></div>
+<center><a href="https://clinic-53.berdu.pw/diet-program">Kunjungi Web Private Clinic No 53</a></center>
 </form>
 
 
